<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:contentDescription="@string/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/question_label"
        android:contentDescription="@string/question_label_contentdescription"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:paddingStart="5dp"
        android:paddingEnd="2dp"
        android:text="@string/question_label"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/answer_label"
        android:contentDescription="@string/answer_label_contentdescription"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:paddingStart="5dp"
        android:paddingEnd="2dp"
        android:text="@string/answer_label"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/answer_tv"
        android:contentDescription="@string/answer_tv_contentdescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/answer_received"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/answer_label"
        app:layout_constraintTop_toBottomOf="@+id/question_tv"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/question_tv"
        android:contentDescription="@string/question_tv_contentdescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/question_asked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toEndOf="@+id/question_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/action_label"
        android:contentDescription="@string/action_label_contentdescription"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:paddingStart="5dp"
        android:paddingEnd="2dp"
        android:text="@string/action_label"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_label" />

    <TextView
        android:id="@+id/action_tv"
        android:contentDescription="@string/action_tv_contentdescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/action_triggered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/action_label"
        app:layout_constraintTop_toBottomOf="@+id/answer_tv" />

    <ImageView
        android:id="@+id/emoji_iv"
        android:contentDescription="@string/emoji_contentdescription"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/question_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_barres"
        tools:visibility="visible" />

    <Button
        android:id="@+id/restart_btn"
        android:contentDescription="@string/btn_contentdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_tv"
        app:layout_constraintVertical_bias="0.13" />

</androidx.constraintlayout.widget.ConstraintLayout>